<resources>
    <string name="app_name">The Daily Cat</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="com.twitter.sdk.android.CONSUMER_KEY">F0layqOqX91JcKmZN6vrcABdI</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">LztFC9ZJL2rOb0bGQVJ25Mi7EwqDLrU35vsb2WX8neoMB7hY90</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings used in app ui-->

    <string name="action_settings">Settings</string>
    <string name="hello">Hello, </string>
    <string name="login_instructions">Login to twitter</string>
    <string name="share_instructions">Enter your message here</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Tweet</string>
    <string name="btn_choose_another">Select another image</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">http://javatechig.android.app</string>
    <string name="twitter_consumer_key">F0layqOqX91JcKmZN6vrcABdI</string>
    <string name="twitter_consumer_secret">LztFC9ZJL2rOb0bGQVJ25Mi7EwqDLrU35vsb2WX8neoMB7hY90</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="default_tweet"> Like this tweet to vote for my cat as Cat of the Day! @DailyCatApp #Catoftheday http://bit.ly/2xbK6ss </string>
    <!-- End Configurations -->

</resources>
